force-app/main/default/objects/B25__Timeframe__c/B25__Timeframe__c.object-meta.xml
<CustomObject>
    <description>Encapsulates a Predefined Timeframe, which can be selected on the Reservation form.</description>
    <label>Predefined Timeframe</label>
    <nameField>
        <displayFormat>PTF-{0000}</displayFormat>
        <label>Predefined Timeframe Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Predefined Timeframes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>