force-app/main/default/objects/B25__Timeframe__c/fields/B25__EndTime__c.field-meta.xml
<CustomField>
    <fullName>B25__EndTime__c</fullName>
    <description>The end time of the Timeframe.</description>
    <inlineHelpText>L’heure de fin de la période</inlineHelpText>
    <label>End Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>