force-app/main/default/objects/B25__Timeframe__c/fields/B25__IsActive__c.field-meta.xml
<CustomField>
    <fullName>B25__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If unchecked, this Timeframe will not appear on the Reservation form.</description>
    <inlineHelpText>Si cette option n’est pas cochée, cette période n’apparaîtra pas sur le formulaire de réservation.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>