force-app/main/default/objects/B25__Timeframe__c/fields/B25__IsDefault__c.field-meta.xml
<CustomField>
    <fullName>B25__IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this Timeframe will be selected by default for the appropriate Resources.</description>
    <inlineHelpText>Lorsque cette option est cochée, cette période sera sélectionnée par défaut pour les ressources appropriées.</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>