force-app/main/default/objects/B25__Timeframe__c/fields/B25__Label2__c.field-meta.xml
<CustomField>
    <fullName>B25__Label2__c</fullName>
    <description>The label to show on the Reservation form.</description>
    <inlineHelpText>Le libellé à afficher sur le formulaire de réservation.</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>