force-app/main/default/objects/B25__Timeframe__c/fields/B25__Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>B25__Number_of_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of days to add to the Start Date to get the End Date.</description>
    <inlineHelpText>Le nombre de jours à ajouter à la date de début pour obtenir la date de fin.</inlineHelpText>
    <label>Number of Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>