force-app/main/default/objects/B25__Timeframe__c/fields/B25__Order__c.field-meta.xml
<CustomField>
    <fullName>B25__Order__c</fullName>
    <description>Determines the order of the timeframes in the picklist on the reservation form. Lower numbers come first.</description>
    <inlineHelpText>Définit l’ordre des périodes dans la liste de sélection sur le formulaire de réservation. Les chiffres les plus bas viennent en premier.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>