force-app/main/default/objects/B25__Timeframe__c/fields/B25__Resource__c.field-meta.xml
<CustomField>
    <fullName>B25__Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When filled in, the Timeframe will appear only for the chosen Resource and its children.</description>
    <inlineHelpText>Lorsque ce champ est rempli, la période n’apparaîtra que pour la ressource choisie et ses enfants.</inlineHelpText>
    <label>Resource</label>
    <referenceTo>B25__Resource__c</referenceTo>
    <relationshipLabel>Predefined Timeframes</relationshipLabel>
    <relationshipName>Predefined_Timeframes</relationshipName>
    <type>Lookup</type>
</CustomField>