force-app/main/default/objects/B25__Timeframe__c/fields/B25__ResourceType__c.field-meta.xml
<CustomField>
    <fullName>B25__ResourceType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When filled in, the Timeframe will only appear for Resources of the chosen Type.</description>
    <inlineHelpText>Lorsque ce champ est rempli, la période n’apparaîtra que pour les ressources du type choisi.</inlineHelpText>
    <label>Resource Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>B25__Resource_Type__c.B25__Rentable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>B25__Resource_Type__c</referenceTo>
    <relationshipLabel>Predefined Timeframes</relationshipLabel>
    <relationshipName>Timeframes</relationshipName>
    <type>Lookup</type>
</CustomField>