force-app/main/default/objects/B25__Timeframe__c/fields/B25__StartTime__c.field-meta.xml
<CustomField>
    <fullName>B25__StartTime__c</fullName>
    <description>The start time of the Timeframe.</description>
    <inlineHelpText>L’heure de début de la période.</inlineHelpText>
    <label>Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>