force-app/main/default/objects/B25__Timeframe__c/listViews/B25__All.listView-meta.xml
<ListView>
    <fullName>B25__All</fullName>
    <columns>NAME</columns>
    <columns>B25__Label2__c</columns>
    <columns>B25__Resource__c</columns>
    <columns>B25__ResourceType__c</columns>
    <columns>B25__StartTime__c</columns>
    <columns>B25__EndTime__c</columns>
    <columns>B25__Number_of_Days__c</columns>
    <columns>B25__IsActive__c</columns>
    <columns>B25__IsDefault__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>